--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,17 @@
+:root{
+    --background-color:#eee;
+    --head-color:rgb(144,202,249);
+    --txt-color:#000;
+    --main-color:#fff;
+}
+
+[data-theme="dark"]{
+    --background-color:#333;
+    --txt-color:#fff;
+    --head-color:#000;
+    --main-color:#000;
+}
+
 *{
     box-sizing: border-box;
     margin:0;
@@ -6,7 +20,8 @@
 
 body{
     font-size:16px;
-    background-color: #e6e9ff;
+    background-color:var(--background-color);
+    
 }
 
 .container{
@@ -14,14 +29,23 @@ body{
     margin:100px auto;
 }
 
+hr{
+    height:2px;
+    background: var(--txt-color);
+}
+
 .head{
     display: flex;
     padding:20px;
-    background-color:#ffd;
+    background-color:var(--head-color);
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    
 }
 
 .chat-txt{
     width: 300px;
+    color:var(--txt-color);
 }
 
 .theme-switch-wrapper{
@@ -32,6 +56,7 @@ body{
 }
 
 .theme-switch-wrapper h2{
+    color:var(--txt-color);
     margin-left:10px;
     font-size:1rem;
 }
@@ -87,7 +112,9 @@ body{
 
 .main{
     padding:30px 40px;
-    background-color: white;
+    background-color: var(--main-color); 
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
 }
 
 .main .lbl{
@@ -99,6 +126,7 @@ body{
     font-size:20px;
     margin-bottom:5px;
     font-weight: 600;
+    color:var(--txt-color);
     
 }
 .main input[type='text']{
