--- a/public/style.css
+++ b/public/style.css
@@ -127,8 +127,8 @@ hr{
     margin-bottom:5px;
     font-weight: 600;
     color:var(--txt-color);
-    
 }
+
 .main input[type='text']{
     width: 100%;
     height:45px;
@@ -150,4 +150,71 @@ hr{
     margin-top:15px;
     width:200px;
     height:35px;
+}
+
+.chat-contain{
+    max-width:1200px;
+    margin:25px auto;
+}
+
+.chat-head{
+    display: flex;
+    justify-content: space-between;
+    background-color: lightgreen;
+    border-top-left-radius: 20px;
+    border-top-right-radius:20px;
+    padding:15px;
+    align-items: center;
+}
+
+.head-end{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width:400px;
+}
+
+.chat-btn{
+    right:0;
+}
+
+.chat-main{
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+}
+
+.main-side{
+    background-color:lightblue;
+    overflow-y: scroll;
+    padding:20px 20px 60px;
+}
+
+.main-side h2,h3{
+    margin-bottom: 10px;
+}
+
+.main-side ul li{
+    padding:10px 0px;
+}
+
+.main-msg{
+    height:550px;
+    overflow-x: scroll;
+    padding: 30px;
+    background-color: lightseagreen;
+}
+
+.txt-send{
+    padding:30px 40px;
+    background-color: lightcoral;
+}
+
+.txt-send form{
+    display: flex;
+}
+
+.txt-send form input[type='text']{
+    height:40px;
+    padding:5px;
+    flex:1;
 }
