--- a/public/style.css
+++ b/public/style.css
@@ -133,6 +133,7 @@ hr{
    border-bottom-left-radius: 15px;
    overflow-y: scroll;
    height:750px;
+   visibility: visible;
 
 }
 
@@ -233,10 +234,11 @@ border:1px solid black;
 
 .new-main .right{
    background-color: white;
-   padding:30px;
+   padding:20px;
    border-top-right-radius: 15px;
    border-bottom-right-radius: 15px;
     height:750px;
+    visibility: visible;
 
 }
 
@@ -259,7 +261,7 @@ border:1px solid black;
 
 .right header .switch-toggle{
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-self: center;
     width:150px;
 }
@@ -269,77 +271,13 @@ border:1px solid black;
     font-size:30px;
     color: red;
     cursor: pointer;
+    margin-right: 20px;
     
 }
 
-.main-switch .switch{
-    position: relative;
-    display: inline-block;
-    width:50px;
-    height:28px;
-}
 
-.main-switch .switch input{
-    opacity: 0;
-    width:0;
-    height:0;
-}
 
-.main-switch .slide{
-   position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-}
 
-.main-switch .slide:before{
-  position: absolute;
-  content: "";
-  height: 35px;
-  width: 35px;
-  left: 0px;
-  bottom: 4px;
-  top: 0;
-  bottom: 0;
-  margin: auto 0;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-  box-shadow: 0 0px 15px #2020203d;
-  background: white url('https://i.ibb.co/FxzBYR9/night.png');
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-.main-switch .switch input:checked + .slide{
-    background-color: #2196f3;
-}
-
-.main-switch .switch input:focus + .slide{
-    box-shadow: 0 0 1px #2196f3;
-}
-
-.main-switch .switch input:checked + .slide:before{
-  -webkit-transform: translateX(24px);
-  -ms-transform: translateX(24px);
-  transform: translateX(24px);
-  background: white url('https://i.ibb.co/7JfqXxB/sunny.png');
-  background-repeat: no-repeat;
-  background-position: center;
-
-}
-
-.slide.Round{
-    border-radius: 28px;
-}
-
-.slide.Round:before{
-    border-radius: 50%;
-}
 
 .fa-align-justify{
     font-size:25px;
@@ -547,6 +485,218 @@ border:1px solid black;
       visibility: hidden;
   }
 
+
+@media only screen and (min-width:701px) and (max-width:1100px){
+
+    .container{
+        max-width: 550px;
+        margin-top:100px;
+        box-shadow: 0 8px 15px 0px rgba(0,0,0,0.2);
+    }
+
+    .fa-align-justify{
+        visibility: visible;
+    }
+
+    .new-main{
+        height:100vh;
+        width:100vw;
+    }
+
+    .left{
+        
+        width:100%;
+        position: fixed;
+        left:0;
+        top:0;
+        visibility: hidden;
+    }
+
+    .right{
+        width:100%;
+        visibility: visible;
+        position: fixed;
+        left:0;
+        top:0;
+    }
+
+    #MainMessage{
+        height:650px;
+        overflow-y: scroll;
+    }
+
+    .send .send-form{
+        display: flex;
+        justify-content: space-between;
+        margin-top: 15px;
+        z-index: 10;
+        position: fixed;
+        bottom:15px;
+        width:90%;
+        
+    }
+    .send input[type="text"]{
+      width:95%;
+      height:40px;
+      padding:20px;
+      font-size: 18px;
+      padding-right:100px;
+      border-radius: 20px;
+      border:1px solid rgba(0,0,0);
+      background-color:rgb(245,245,245);
+    }
+  
+    .fa-smile{
+        align-self: center;
+        font-size:30px;
+        position: fixed;
+        bottom: 20px;
+        right:16%;
+        color: rgb(74, 83, 2);
+        
+        cursor: pointer;
+    }
+  
+    .new-btn{
+      position: fixed;
+      right:11%;
+      border-radius: 50%;
+      height:45px;
+      align-self: center;
+      cursor: pointer;
+      width:45px;
+      background-color: rgb(19,118,231);
+      border:1px solid rgb(19,118,231);
+    }
+  
+    .fa-paper-plane{
+        color:white;
+        font-size:18px;
+        cursor: pointer;
+    }
+
+    .reaction{
+      display: flex;
+      position: fixed;
+      bottom:60px;
+      z-index: 100;
+      visibility: hidden;
+      right:2%;
+      width:200px;
+      background-color: rgb(90, 88, 88);
+      justify-content: space-between;
+      padding:10px;
+      border-radius: 20px;
+    }
+
+}
+
+
+@media only screen and (min-width:501px) and (max-width:700px){
+    .container{
+        max-width: 450px;
+        margin-top:100px;
+        box-shadow: 0 8px 15px 0px rgba(0,0,0,0.2);
+    }
+
+    .fa-align-justify{
+        visibility: visible;
+    }
+
+    .new-main{
+        height:100vh;
+        width:100vw;
+    }
+
+    .left{
+        
+        width:100%;
+        position: fixed;
+        left:0;
+        top:0;
+        visibility: hidden;
+    }
+
+    .right{
+        width:100%;
+        visibility: visible;
+        position: fixed;
+        left:0;
+        top:0;
+    }
+
+    #MainMessage{
+        height:500px;
+        overflow-y: scroll;
+    }
+
+    .send .send-form{
+        display: flex;
+        justify-content: space-between;
+        margin-top: 15px;
+        z-index: 10;
+        position: fixed;
+        bottom:15px;
+        width:90%;
+        
+    }
+    .send input[type="text"]{
+      width:95%;
+      height:40px;
+      padding:20px;
+      font-size: 18px;
+      padding-right:100px;
+      border-radius: 20px;
+      border:1px solid rgba(0,0,0);
+      background-color:rgb(245,245,245);
+    }
+  
+    .fa-smile{
+        align-self: center;
+        font-size:30px;
+        position: fixed;
+        bottom: 20px;
+        right:17%;
+        color: rgb(74, 83, 2);
+        
+        cursor: pointer;
+    }
+  
+    .new-btn{
+      position: fixed;
+      right:8%;
+      border-radius: 50%;
+      height:45px;
+      align-self: center;
+      cursor: pointer;
+      width:45px;
+      background-color: rgb(19,118,231);
+      border:1px solid rgb(19,118,231);
+    }
+  
+    .fa-paper-plane{
+        color:white;
+        font-size:18px;
+        cursor: pointer;
+    }
+
+    .reaction{
+      display: flex;
+      position: fixed;
+      bottom:60px;
+      z-index: 100;
+      visibility: hidden;
+      right:2%;
+      width:200px;
+      background-color: rgb(90, 88, 88);
+      justify-content: space-between;
+      padding:10px;
+      border-radius: 20px;
+    }
+
+}
+
+
   @media only screen and (max-width:500px){
 
     .container{
@@ -565,11 +715,17 @@ border:1px solid black;
     }
 
     .left{
+        
+        width:100%;
+        position: fixed;
+        left:0;
+        top:0;
         visibility: hidden;
     }
 
     .right{
         width:100%;
+        visibility: visible;
         position: fixed;
         left:0;
         top:0;
